# dmf-cms

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  NOTICE  QWEN.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.forgejo/workflows/: ci.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
charts/dmf-cms/: Chart.yaml  values.yaml
config/: app-contracts.yaml
docs/: DEVELOPMENT-AND-BUILD-RULES.md  IMPLEMENTATION-STRATEGY.md  README.md  mxl-flows-page.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.tsx  index.css
scripts/: build-image.sh  publish-to-ghcr.sh  release.sh  sync-version.sh  verify-cluster.sh
src/dmf_cms/: __init__.py  authentik.py  awx.py  capacity.py  catalog.py  contracts.py  drain.py  forgejo.py  main.py  media_workloads.py  mxl.py  netbox.py  operations.py  prometheus.py  (+3 more)
tests/: test_admin_users_roster.py  test_authentik_groups.py  test_autoscale_operations.py  test_awx_write_gate.py  test_backchannel_split.py  test_base_path.py  test_capacity.py  test_capacity_gate.py  test_catalog_schema.py  test_contracts.py  test_drain.py  test_drain_verification.py  test_l3_token_registry.py  test_main.py  test_media_workloads.py  test_media_workloads_grouped.py  test_mxl.py  test_mxl_live_view.py  test_operations_lifecycle.py  test_rollback_command.py  test_view_as.py  test_workflows_filter.py  test_workload_seam.py  test_workspace_health.py
(+62 files in other folders)
