[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmf-cms"
version = "0.12.0"
description = "DMF Console - operator-facing control surface for the DMF platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "itsdangerous>=2.2,<3",
  "PyYAML>=6.0,<7",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dmf_cms = ["static/app/*.html", "static/app/*.js", "static/app/*.css"]
